--- a/Lesson3(RE385. Домашнее задание — развитие проекта ishop)/package.json
+++ b/Lesson3(RE385. Домашнее задание — развитие проекта ishop)/package.json
@@ -4,10 +4,9 @@
   "description": "iShop3",
   "main": "index.html",
   "scripts": {
-    "start":"npm run lite",
+    "start": "npm run lite",
     "test": "karma.js hhhh",
-    "lite":"lite-server",
-    "dev": "webpack --mode development"
+    "lite": "lite-server",
   },
   "author": "Dmitrienko",
   "license": "ISC",
@@ -18,6 +17,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "lite-server": "^2.6.1",
-    "webpack": "^5.72.0"
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   }
 }
