--- a/Lesson3(RE385_ishop3)/package.json
+++ b/Lesson3(RE385_ishop3)/package.json
@@ -4,8 +4,8 @@
   "description": "блок голосования",
   "main": "App.js",
   "scripts": {
-    "build": ".\\node_modules\\.bin\\webpack",
-    "livebuild": ".\\node_modules\\.bin\\webpack-dev-server --progress --colors"
+    "build": "npx webpack",
+    "livebuild": "npx webpack-dev-server --progress --colors"
   },
   "author": "",
   "license": "ISC",
