--- a/Lesson3(RE385_ishop3)/package.json
+++ b/Lesson3(RE385_ishop3)/package.json
@@ -2,7 +2,7 @@
   "name": "votesblock",
   "version": "1.0.0",
   "description": "блок голосования",
-  "main": "index.js",
+  "main": "App.js",
   "scripts": {
     "build": "npx webpack",
     "livebuild": "npx webpack-dev-server --progress --colors"
